# MobileRobotsCourse

./: README.md  Setup.sh
catkin_ws/: frames.gv
catkin_ws/src/: practica1.cpp
catkin_ws/src/hardware/arms/: CMakeLists.txt
catkin_ws/src/hardware/hardware_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/head/: CMakeLists.txt
catkin_ws/src/hardware/torso/: CMakeLists.txt
catkin_ws/src/hri/simple_gui/: CMakeLists.txt
catkin_ws/src/laser_distance/: CMakeLists.txt  package.xml
catkin_ws/src/laser_distance/launch/: laser.launch
catkin_ws/src/laser_distance/src/: .scan.py.swp  scan.py
catkin_ws/src/planning/knowledge/: CMakeLists.txt  package.xml
catkin_ws/src/students/carranza_ayala/: CMakeLists.txt  package.xml  prueba.txt
catkin_ws/src/students/diaz_martinez/: CMakeLists.txt  package.xml
catkin_ws/src/students/eguiarte_morett/: CMakeLists.txt  package.xml  prueba.txt
catkin_ws/src/students/garcia_garces/: #CMakeLists.txt#  CMakeLists.txt  package.xml  practica_01_node
catkin_ws/src/students/garcia_gomez/: CMakeLists.txt  package.xml
catkin_ws/src/students/gil_gonzalez/: CMakeLists.txt  package.xml
catkin_ws/src/students/hernandez_hernandez/: CMakeLists.txt  package.xml
catkin_ws/src/students/jimenez_jimenez/: CMakeLists.txt  package.xml  prueba.txt
catkin_ws/src/students/marquez_solis/: CMakeLists.txt  package.xml  practica07.py
catkin_ws/src/students/ortiz_barajas/: CMakeLists.txt  hello_git_hub.txt  package.xml
catkin_ws/src/students/padilla_herrera/: package.xml  (+1 more)
catkin_ws/src/surge_et_ambula/: CMakeLists.txt  package.xml
(+273 files in other folders)
